# gulls_astrometry

./: .gitignore  1L_master.head  README.md  pyproject.toml  requirements-test.txt  run_all.py  run_tests.py
docs/: TESTING_SUMMARY.md
experiments/: centroid.ipynb
input/1L/: wg09_test_ffp_0_124_624.det.lcdata  wg09_test_ffp_1_673_851.det.lc  wg09_test_ffp_2_8_573.det.lc
src/astrometry/: __init__.py  astrometry.py
src/centroid_addition/: centroid_addition.py
src/gulls_parser/: __init__.py  gulls_parser.py
tests/: README.md  conftest.py  test_gulls_parser.py  test_incomplete_methods.py  test_working.py
validation/: DataChallengeDay1.ipynb
